@@ -6,3 +6,5 @@
 * N Minor Enhancements:
   * Switched to an ERb-based TemplatePage, see RDoc::TemplatePage.
   * Class/module ri now displays attribute and constant comments.
+  * Cross-references can be disabled with a leading \.
+  * Relaxed parsing for some RDoc inline markup.
